Simplify request code